tests/neg/experimental-import-with-top-level-val-underscore.scala

import language.experimental.erasedDefinitions

val _ = // error
  println("Hello, world!")
  42
